Navigation list alignment FIXED
The navigation list is turned  from <ul> into <table> format to have the
balance of the alignment of each listed word.
Added colour when hover.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -107,12 +107,14 @@ hr{
     border-color: lightgray !important;
 }
 .row{
-    font-family: 'Roboto Light'
+    font-family: 'Roboto Light';
+    font-family: 'Georgia';
+    font-weight: bold !important;
 }
 
 .cat-details {
     padding-left: 40px !important;
-    font-family: 'Roboto';
+
 }
 .meny-left > .meny {
     opacity: 0;
